Fixed alignment of units

--- a/HAVI_app/wwwroot/css/supplier.css
+++ b/HAVI_app/wwwroot/css/supplier.css
@@ -48,6 +48,9 @@
     padding: 50px;
 }
 
+.center-for-units {
+    padding-top: 5px;
+}
 
 .white-box-submit {
     background-color: var(--background-white);
